--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,5 @@
-# Python
 __pycache__/
 *.pyc
-*.pyo
-*.pyd
-
-# Virtual environment
-.venv/
-env/
-venv/
-
-# Uploaded and generated files
+.env
 uploads/
-static/results/
-
-# OS files
-.DS_Store
-Thumbs.db
-
-# Logs
-*.log
+static/
